retrieve user register and friends

--- a/SnapNShare/nbproject/private/private.properties
+++ b/SnapNShare/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\siddharth\\AppData\\Roaming\\NetBeans\\8.2\\config\\PayaraEE6\\Properties\\pfv3721877745.properties
+deploy.ant.properties.file=C:\\Users\\ritesh\\AppData\\Roaming\\NetBeans\\8.2\\config\\PayaraEE6\\Properties\\pfv377405794.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=F:/Software/payara41/glassfish/domains/domain
-j2ee.server.home=F:/Software/payara41/glassfish
-j2ee.server.instance=[F:\\Software\\payara41\\glassfish;F:\\Software\\payara41\\glassfish\\domains\\domain]deployer:pfv3ee6wc:localhost:4848
-j2ee.server.middleware=F:/Software/payara41
-user.properties.file=C:\\Users\\siddharth\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+j2ee.server.domain=D:/Softy/payara-4.1.2.173/payara41/glassfish/domains/domain1
+j2ee.server.home=D:/Softy/payara-4.1.2.173/payara41/glassfish
+j2ee.server.instance=[D:\\Softy\\payara-4.1.2.173\\payara41\\glassfish;D:\\Softy\\payara-4.1.2.173\\payara41\\glassfish\\domains\\domain1]deployer:pfv3ee6wc:localhost:4848
+j2ee.server.middleware=D:/Softy/payara-4.1.2.173/payara41
+user.properties.file=C:\\Users\\ritesh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
